# openmeteo-experiments

./: .gitignore  LICENSE  Makefile  README.md  github.txt  pyproject.toml  requirements.txt  setup.py
.venv311/: pyvenv.cfg
docs/: Makefile  conf.py  index.rst  make.bat
models/precipitation_fall/: features.json  model.pkl
models/rain_or_not/: features_v2.json  model.pkl  model_v2.pkl
notebooks/precipitation_fall/: features.json  features_v2.json  model_v2.pkl
notebooks/rain_or_not/: OpenMeteo_AT2_25410263_Experiments (1).ipynb
reports/: RESULTS_2024.md  precip_2024_metrics.json  precip_2024_predictions.csv  rain_2024_metrics.json  rain_2024_predictions.csv
src/oml_skies/data/: openmeteo_fetch.py
src/oml_skies/features/: builders.py
src/oml_skies/targets/: labels.py
src/oml_skies/train/: precip_fall.py  rain_or_not.py
